kubernetes/apps/flux-system/webhooks/app/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
    hajimari.io/icon: mdi:shield-account
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Cache-Control "no-store";
      add_header Pragma "no-cache";
      add_header X-Frame-Options "SAMEORIGIN";
      add_header X-XSS-Protection "1; mode=block";
spec:
  ingressClassName: external
  rules:
    - host: "auth.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authelia
                port:
                  number: 80
